[tool.poetry]
package-mode = false    

[project]
name = "veryfi"
version = "0.1.0"
description = ""
authors = [
    {name = "Bex U.",email = "chrysslyn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]  
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

