[tool.poetry]
package-mode = false    

[project]
name = "veryfi-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "Bex U.",email = "chrysslyn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]  
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

